--- a/sistema/views/home/empleados/empleados.html
+++ b/sistema/views/home/empleados/empleados.html
@@ -1,1 +1,40 @@
-Empleados
+
+<div class="content container animate__animated  animate__fadeIn animate__faster" >
+    <h1 class="header">
+        <span class="header-text">Empleados</span>
+    
+    </h1>
+
+    <settings _nghost-vss-c332>
+
+        <aside class="admin-pill-nav rounded" style="width: 150px;">
+            <a  class="mat-focus-indicator nav-item mat-menu-item selected" ui-sref-active="selected"  ui-sref="home.empleados.planilla">
+                <div class="name">Planilla</div>
+                <div  class="mat-ripple mat-menu-ripple"></div>
+            </a>
+            <a  class="mat-focus-indicator nav-item mat-menu-item"  ui-sref-active="selected"  ui-sref="home.empleados.asistencia">
+                <div class="name">Asistencia</div>
+                <div  class="mat-ripple mat-menu-ripple"></div>
+            </a>
+            <a  class="mat-focus-indicator nav-item mat-menu-item"  ui-sref-active="selected"  ui-sref="home.empleados.pagosueldo">
+                <div class="name">Pago sueldos</div>
+                <div  class="mat-ripple mat-menu-ripple"></div>
+            </a>
+            <a  class="mat-focus-indicator nav-item mat-menu-item"  ui-sref-active="selected"  ui-sref="home.empleados.usuario">
+                <div class="name">Usuarios</div>
+                <div  class="mat-ripple mat-menu-ripple"></div>
+            </a>
+        </aside>
+    
+        <div class="settings-panels-container">
+             <div ui-view=""></div>
+        </div>
+
+    </settings>
+  
+</div>
+
+   
+
+  
+
