--- a/sistema/views/home/empleados/empleados.html
+++ b/sistema/views/home/empleados/empleados.html
@@ -5,9 +5,9 @@
     
     </h1>
 
-    <settings _nghost-vss-c332>
+    <settings _nghost-vss-c332 >
 
-        <aside class="admin-pill-nav rounded" style="width: 150px;">
+        <aside class="admin-pill-nav rounded menuScroll" style="width: 150px;">
             <a  class="mat-focus-indicator nav-item mat-menu-item selected" ui-sref-active="selected"  ui-sref="home.empleados.planilla">
                 <div class="name">Planilla</div>
                 <div  class="mat-ripple mat-menu-ripple"></div>
@@ -38,3 +38,24 @@
 
   
 
+<script>
+    
+    posicionarMenu();
+                
+                $(window).scroll(function() {    
+                    posicionarMenu();
+                });
+                
+                function posicionarMenu() {
+                    var altura_del_header = $('.stopheader').outerHeight(true);
+                    var altura_del_menu = $('.menuScroll').outerHeight(true);
+                
+                    if ($(window).scrollTop() >= altura_del_header){
+                        $('.menuScroll').addClass('fixedWrapper');
+                        // $('.wrapper').css('margin-top', (altura_del_menu) + 'px');
+                    } else {
+                        $('.menuScroll').removeClass('fixedWrapper');
+                        $('.fixedWrapper').css('margin-top', '0');
+                    }
+                }
+</script>
