--- a/sistema/views/home/viajes/viajes.html
+++ b/sistema/views/home/viajes/viajes.html
@@ -1,1 +1,171 @@
-viajes
+
+<div class="content container animate__animated  animate__fadeIn animate__faster" >
+    <h1 class="header">
+        <span class="header-text">Hoja de viajes</span>
+    
+    </h1>
+
+    <data-table class="mat-sort responsive-material-table animate__animated animate__fadeIn animate__faster" >
+        <div class="data-table-panel"> 
+            <div class="data-table-header">
+                <div class="header-inner">
+
+          
+                  <div class="right">
+                    <div class="input-container">
+                      <div class="input-icon-container"> 
+                        <input type="text" ng-model="parametrosChild.search" class="search-input" placeholder="Buscar viaje">
+                        <mat-icon  role="img" svgicon="search" class="mat-icon notranslate mat-icon-no-color" aria-hidden="true"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fit="" height="100%" width="100%" preserveAspectRatio="xMidYMid meet" focusable="false"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg></mat-icon>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+
+
+
+                 <!-- CONTENIDO  -->
+                 <mat-table class="mat-table" infinite-scroll='loadMore()' infinite-scroll-distance='0' infinite-scroll-container='".mainView"'  infinite-scroll-immediate-check='false'>
+                    <mat-header-row class="mat-header-row">
+                      <mat-header-cell class="mat-sort-header mat-header-cell">
+                        <div class="mat-sort-header-container">
+                          <button type="button" class="mat-sort-header-button">N° Viaje</button>
+                        </div>
+                      </mat-header-cell>
+                      <mat-header-cell class="mat-sort-header mat-header-cell">
+                        <div class="mat-sort-header-container">
+                          <button type="button" class="mat-sort-header-button">Asignado</button>
+                        </div>
+                      </mat-header-cell>
+                      <mat-header-cell class="mat-sort-header mat-header-cell">
+                        <div class="mat-sort-header-container">
+                          <button type="button" class="mat-sort-header-button">Gastos / Entregado</button>
+                        </div>
+                      </mat-header-cell>
+                      <mat-header-cell class="mat-sort-header mat-header-cell">
+                        <div class="mat-sort-header-container">
+                          <button type="button" class="mat-sort-header-button">Estado</button>
+                        </div>
+                      </mat-header-cell>
+                      <mat-header-cell class="mat-sort-header mat-header-cell">
+                        <div class="mat-sort-header-container">
+                          <button type="button" class="mat-sort-header-button"></button>
+                        </div>
+                      </mat-header-cell>
+                    </mat-header-row>
+    
+                    <mat-row _ngcontent-ooa-c118 class="mat-row"  ng-repeat="viajes in desserts">
+
+                        <mat-cell  class="mat-cell mat-column-name ">
+                            <div  class="content">
+                                <div>{{viajes.numero_Viaje}}</div>
+                                <div class="secondary" style="color: rgb(0 0 0 / 55%); font-size: 12px;">
+                                  {{viajes.fecha_Viaje | date:'MM/dd/yyyy'}}
+                                </div>
+
+                                
+                            </div>
+                          </mat-cell>
+
+                          
+                          <mat-cell class="mat-cell mat-column-name ">
+                            <!-- <span class="material-icons mat-icon notranslate mat-icon-no-color" style="font-size: 18px;">local_shipping</span> -->
+                            <div  class="content">
+                                <div>{{viajes.nombre_perfil}}</div>
+                                <div class="secondary" style="color: rgb(0 0 0 / 55%); font-size: 12px;">
+                                  {{viajes.placa_vehiRemol | uppercase}} /  {{viajes.placa_vehiSemi | uppercase}}
+                                </div>
+                            </div>
+                          </mat-cell>
+                        
+                          <mat-cell class="mat-cell mat-column-name ">
+                            <div  class="content">
+                                <div>{{viajes.TotalGastos | currency: "S/ ": 2}}</div>
+                                <div class="secondary" style="color: rgb(0 0 0 / 55%); font-size: 12px;">
+                                  {{viajes.entregaDinero_Viaje | currency: "S/ ": 2}}
+                                  </div>
+                            </div>
+                          </mat-cell>
+                          
+                          <mat-cell class="mat-cell mat-column-name ">
+                            <div  class="content">
+                                <div>{{viajes.estado_Viaje}}</div>
+                              
+                            </div>
+                          </mat-cell>
+                          
+                          <mat-cell class="mat-cell mat-column-name ">
+                            <div  class="content">
+                              <!-- <md-button class="md-icon-button" aria-label="More" ng-click="openMenu($mdMenu, $event)">
+                                <span class="material-icons mat-icon notranslate mat-icon-no-color" style="font-size: 25px;">more_vert</span>
+                              </md-button> -->
+                             
+
+
+                              <md-menu>
+                                <md-button aria-label="Open phone interactions menu" class="md-icon-button" ng-click="openMenu($mdMenu, $event)">
+                                  <span class="material-icons mat-icon notranslate mat-icon-no-color" style="font-size: 25px;">more_vert</span>
+                                </md-button>
+                                <md-menu-content width="2">
+                                  <!-- ng-mouseleave="$mdMenu.close()" -->
+                                  <md-menu-item>
+                                    <md-button ng-click="showAdvanced($event)">
+                                    
+                                      Ver
+                                    </md-button>
+                                  </md-menu-item>
+                                  <md-menu-item>
+                                    <md-button disabled="disabled" ng-click="ctrl.checkVoicemail()">
+                                    
+                                      Editar
+                                    </md-button>
+                                  </md-menu-item>
+                                  <!-- <md-menu-divider></md-menu-divider>
+                                  <md-menu-item>
+                                    <md-button ng-click="ctrl.toggleNotifications()">
+                                      {{ctrl.notificationsEnabled ? 'Disable' : 'Enable' }} notifications
+                                    </md-button>
+                                  </md-menu-item> -->
+                                </md-menu-content>
+                              </md-menu>
+
+                              <!-- <div class="options-column">
+                                <div class="track-options-button">
+                                 
+                                </div>
+                              </div> -->
+                                <!-- <a href="" ng-click="productVM.formProducto(productos)" class="mat-focus-indicator mat-icon-button mat-button-base">
+                                     <span class="material-icons mat-icon notranslate mat-icon-no-color" style="font-size: 18px;">create</span>
+                                     <span class="material-icons mat-icon notranslate mat-icon-no-color" style="font-size: 18px;">visibility</span>
+                                  </a> -->
+                            </div>
+                          </mat-cell>   
+                    </mat-row>
+
+                   
+    
+    
+    
+                  </mat-table>
+
+                  <no-results-message ng-show="showMessage" class="no-results-message"> 
+     
+                </no-results-message>
+                <mat-paginator class="mat-paginator">
+                  <div class="mat-paginator-outer-container">
+                    <div class="mat-paginator-container">
+                      <mat-progress-bar ng-show="isLoading" role="progressbar" aria-valuemin="0" aria-valuemax="100" mode="indeterminate" color="accent" class="mat-progress-bar mat-accent ng-star-inserted">
+            
+                      </mat-progress-bar>
+            
+                    </div>
+                  </div>
+                </mat-paginator>
+
+
+        </div>
+    </data-table>
+  
+</div>
