--- a/sistema/views/home/viajes/modal/grTransportista.html
+++ b/sistema/views/home/viajes/modal/grTransportista.html
@@ -11,7 +11,7 @@
                         <crupdate-role-modal _nghost-wlv-c340>
                             <div class="modal-header">
                                 <h2 class="mat-dialog-title modal-title " id="mat-dialog-title-1">
-                                   Nueva G.R de Transportista {{testAlex}}
+                                   Nueva G.R de Transportista
                                 </h2>
                             </div>
                 
