call data flota

--- a/sistema/views/home/flota/flota.html
+++ b/sistema/views/home/flota/flota.html
@@ -1,1 +1,28 @@
-Flota
+
+<div class="content container animate__animated  animate__fadeIn animate__faster" >
+    <h1 class="header">
+        <span class="header-text">Flota</span>
+    
+    </h1>
+
+    <settings _nghost-vss-c332 >
+
+        <aside class="admin-pill-nav rounded menuScroll" style="width: 150px;">
+            <a  class="mat-focus-indicator nav-item mat-menu-item selected" ui-sref-active="selected"  ui-sref="home.flota.remolque">
+                <div class="name">Remolcador</div>
+                <div  class="mat-ripple mat-menu-ripple"></div>
+            </a>
+            <a  class="mat-focus-indicator nav-item mat-menu-item"  ui-sref-active="selected"  ui-sref="home.flota.semiremolque">
+                <div class="name">Semi-remolque</div>
+                <div  class="mat-ripple mat-menu-ripple"></div>
+            </a>
+
+        </aside>
+    
+        <div class="settings-panels-container">
+             <div ui-view=""></div>
+        </div>
+
+    </settings>
+  
+</div>
