--- a/sistema/views/home/clientes/cliente/modal/clienteModal.html
+++ b/sistema/views/home/clientes/cliente/modal/clienteModal.html
@@ -11,20 +11,20 @@
                         <crupdate-role-modal _nghost-wlv-c340>
                             <div class="modal-header">
                                 <h2 class="mat-dialog-title modal-title " id="mat-dialog-title-1">
-                                   Nuevo Remolque
+                                   Nuevo Cliente
                                 </h2>
                             </div>
                 
-                            <form name="form" ng-submit="saveRemolque(dataremol)">
+                            <form name="form" ng-submit="saveCliente(dataCliente)">
                                 <div class="mat-dialog-content many-inputs">
                 
                
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="input-container name-input-container">
-                                                <label>Placa</label>
+                                                <label>R. Social</label>
                                                 
-                                                <input type="text" ng-model="dataremol.placa_vehiRemol" required="">
+                                                <input type="text" ng-model="dataCliente.razonSocial_client" required="">
                                             </div>
                                         </div>
                                      
@@ -32,41 +32,18 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="input-container name-input-container">
-                                                <label>Color</label>
-                                                <input type="text" ng-model="dataremol.color_vehiRemol" required="">
+                                                <label>Dirección</label>
+                                                <input type="text" ng-model="dataCliente.direccion_client" required="">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="input-container name-input-container">
-                                                <label>Moldelo</label>
-                                                <input type="text"  ng-model="dataremol.modelo_vehiRemol" required="">
+                                                <label>Celular</label>
+                                                <input type="text"  ng-model="dataCliente.celular_client" required="">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="input-container name-input-container">
-                                                <label>Año</label>
-                                                <input type="text" ng-model="dataremol.ano_vehiRemol" required="">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="input-container name-input-container">
-                                                <label>Estado</label>
-                                             
-                                                       
-                                                       <select ng-model="dataremol.estado_vehiRemol" required>
-                                                      
-                                                        <!-- <optgroup label="Local Database"> -->
-                                                            <option value="1" >Activo</option>
-                                                            <option value="0" >Inactivo</option>
-                                                           
-                                                        <!-- </optgroup> -->
-                                                       </select>
-                                                  
-                                            </div>
-                                        </div>
-                                    </div>
+                          
                 
                                 </div>
                 
