--- a/sistema/views/home/clientes/rutas/modal/rutasModal.html
+++ b/sistema/views/home/clientes/rutas/modal/rutasModal.html
@@ -11,20 +11,27 @@
                         <crupdate-role-modal _nghost-wlv-c340>
                             <div class="modal-header">
                                 <h2 class="mat-dialog-title modal-title " id="mat-dialog-title-1">
-                                   Nuevo Remolque
+                                   Nueva Ruta
                                 </h2>
                             </div>
                 
-                            <form name="form" ng-submit="saveRemolque(dataremol)">
+                            <form name="form" ng-submit="saveRutas(dataRutas)">
                                 <div class="mat-dialog-content many-inputs">
                 
                
                                     <div class="row">
-                                        <div class="col-md-12">
+                                        <div class="col-md-6">
                                             <div class="input-container name-input-container">
-                                                <label>Placa</label>
+                                                <label>Punto de Origen</label>
                                                 
-                                                <input type="text" ng-model="dataremol.placa_vehiRemol" required="">
+                                                <input type="text" ng-model="dataRutas.origen_ruta" required="">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="input-container name-input-container">
+                                                <label>Punto de Destino</label>
+                                                
+                                                <input type="text" ng-model="dataRutas.destino_ruta" required="">
                                             </div>
                                         </div>
                                      
@@ -32,41 +39,13 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="input-container name-input-container">
-                                                <label>Color</label>
-                                                <input type="text" ng-model="dataremol.color_vehiRemol" required="">
+                                                <label>Distancia(KM)</label>
+                                                <input type="text" ng-model="dataRutas.distancia_km_ruta" required="">
                                             </div>
                                         </div>
-                                        <div class="col-md-6">
-                                            <div class="input-container name-input-container">
-                                                <label>Moldelo</label>
-                                                <input type="text"  ng-model="dataremol.modelo_vehiRemol" required="">
-                                            </div>
-                                        </div>
+                                      
                                     </div>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="input-container name-input-container">
-                                                <label>Año</label>
-                                                <input type="text" ng-model="dataremol.ano_vehiRemol" required="">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="input-container name-input-container">
-                                                <label>Estado</label>
-                                             
-                                                       
-                                                       <select ng-model="dataremol.estado_vehiRemol" required>
-                                                      
-                                                        <!-- <optgroup label="Local Database"> -->
-                                                            <option value="1" >Activo</option>
-                                                            <option value="0" >Inactivo</option>
-                                                           
-                                                        <!-- </optgroup> -->
-                                                       </select>
-                                                  
-                                            </div>
-                                        </div>
-                                    </div>
+                          
                 
                                 </div>
                 
